[gd_scene load_steps=3 format=3 uid="uid://64x64138l86m"]

[ext_resource type="Theme" uid="uid://cfxplfmm37w83" path="res://Resources/sound_options_theme.tres" id="1_yem1f"]
[ext_resource type="Script" uid="uid://crmuoruf33eai" path="res://Scripts/sound_options.gd" id="1_yhd3f"]

[node name="SoundOptions" type="CanvasLayer"]
script = ExtResource("1_yhd3f")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yem1f")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Sfx Volume Lable" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Sfx Volume"

[node name="SfxVolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -40.0
max_value = 0.0
step = 0.5
value = -6.0

[node name="MainVolumeLable" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Main Volume"

[node name="MainVolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -60.0
max_value = 0.0
step = 0.5
value = -10.0
